--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "toast": "^0.5.4",
